--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 	display: flex;
 	flex-direction: column;
+	background-color: white;
 	margin: 0;
 	padding: 0;
 }
@@ -34,7 +35,7 @@ a {
 .container {
 	display: flex;
 	background: #1F2937;
-	font-size: 48px;
+	font-size: 36px;
 	font-weight: bolder;
 	color: #F9FAF8;
 	padding: 20px 150px 120px 150px;
@@ -68,31 +69,34 @@ a {
 .information {
 	display: flex;
 	flex-direction: column;
-	font-size: 36px;
+	font-size: 32px;
 	font-weight: bolder;
 	color: #1F2937;
 	align-items: center;
 	background-color: #F9FAF8;
-	padding: 10px 200px;
+	padding: 10px 100px;
 }
 
 .cards {
 	display: flex;
-	font-size: 20px;
+	font-size: 16px;
+	font-weight: 200;
 	text-align: center;
-	gap: 40px;
+	gap: 30px;
 	flex-wrap: wrap;
+	flex-shrink: inherit;
 }
 
 .card {
 	display: flex;
 	flex-direction: column;
-	width: 240px;
+	width: 180px;
 	min-height: 200px;
 }
 
 button {
 	background: #3882F6;
+	border: 2px solid white;
 	color: #F9FAF8;
 	font-size: 30px;
 	font-weight: bold;
@@ -105,9 +109,9 @@ button {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
-	padding: 0 470px;
+	padding: 0 150px;
 	background-color: #E5E7EB;
-	font-size: 36px;
+	font-size: 28px;
 	font-style: italic;
 	color: #1F2937;
 }
@@ -129,6 +133,7 @@ button {
 	align-items: center;
 	text-align: initial;
 	background: #3882F6;
+	
 	color: #F9FAF8;
 	padding: 20px 150px;
 	margin: 100px 200px;
@@ -139,10 +144,6 @@ button {
 	flex-direction: column;
 	font-size: 24px;
 	padding: 50px 0;
-}
-
-.signup button {
-	border: 2px solid white;
 }
 
 .call  h3 {
